--- a/ref/fire.bib
+++ b/ref/fire.bib
@@ -4,7 +4,7 @@
 	Howpublished = {{USDA Forest Service Research Paper INT-115}},
 	Pages = {40},
 	Title = {A Mathematical Model for Predicting Fire Spread in Wildland Fires},
-	note = {\mbox{\url{https://www.fs.fed.us/rm/pubs_int/int_rp115.pdf}}, accessed March 2018},
+	note = {\mbox{\url{https://www.fs.usda.gov/rm/pubs_int/int_rp115.pdf}}, accessed March 2018},
 	Xmonth = {January},
 	Year = {1972},
 	}
@@ -30,9 +30,6 @@ address="New York",
 call=" SD421 .P94 1996     auraria"
 }
 
-
-
-
 @misc{WHO-2024-WFS,
   Author       = {WHO},
   title        = {Wildfires},
@@ -45,6 +42,7 @@ call=" SD421 .P94 1996     auraria"
 @misc{USGS-2024-WQA,
   author       = {{United States Geological Survey}},
   title        = {Water Quality After Wildfire},
+  year         = {2024},
   howpublished = {\url{https://www.usgs.gov/mission-areas/water-resources/science/water-quality-after-wildfire#overview}},
   note         = {Accessed: July 3, 2024}
 }
@@ -55,7 +53,7 @@ call=" SD421 .P94 1996     auraria"
   month = {10},
   title        = {Climate-exacerbated wildfires cost the {U.S.} between {\$394}
 to {\$893} billion each year in economic costs and damages},
-  howpublished = {\url{https://www.jec.senate.gov/public/_cache/files/9220abde-7b60-4d05-ba0a-8cc20df44c7d/jec-report-on-total-costs-of-wildfires.pdf}},
+  howpublished = {\url{https://www.jec.senate.gov/}},
   note         = {Accessed: July 3, 2024}
 }
 
@@ -128,19 +126,22 @@ to {\$893} billion each year in economic costs and damages},
   number       = {PMS 425-1},
   location     = {Boise, ID, USA},
   note         = {Chapter 11 - Weather and Fuel Moisture},
+  howpublished = {\url{https://www.nwcg.gov/publications/pms425-1/fire-weather-pms-425-1}},
   urldate      = {2024-07-03}
 }
 
 @misc{NIFC-2024-RAW,
   author       = {NIFC},
+  year = {2024},
   institution = {National Interagency Fire Center},
-  title        = {Remote Automatic Weather Stations (RAWS)},
+  title        = {Remote Automatic Weather Stations ({RAWS})},
   howpublished = {\url{https://www.nifc.gov/about-us/what-is-nifc/remote-automatic-weather-stations}},
   note         = {Accessed: July 3, 2024}
 }
 
 @misc{NIFC-2024-FAF,
   author       = {NIFC},
+  year = {2024},
   institution = {National Interagency Fire Center},
   title        = {Fire and Fuels},
   howpublished = {\url{https://gacc.nifc.gov/rmcc/predictive/Fire%20Behavior%20Fuel%20Model%20Descriptions.pdf}},
@@ -150,6 +151,7 @@ to {\$893} billion each year in economic costs and damages},
 @misc{NFSC-2024-MFB,
   author       = {NFSC},
   institution = {Northwest Fire Science Consortium},
+  year = {2024},
   title        = {Measures of Fire Behavior},
   howpublished = {\url{https://nwfirescience.org/sites/default/files/publications/FIREFACTS_Measures%20of%20fire%20behavior%20FINAL.pdf}},
   note         = {Accessed: July 3, 2024}
@@ -157,6 +159,7 @@ to {\$893} billion each year in economic costs and damages},
 
 @misc{OpenWFM-2024-HTD,
   author       = {OpenWFM},
+  year = {2024},
   institution = {Open Wildland Fire Modeling eCommunity},
   title        = {How to diagnose fuel properties in {WRF-SFIRE}},
   howpublished = {\url{https://wiki.openwfm.org/wiki/How_to_diagnose_fuel_properties_in_WRF-SFIRE}},
@@ -176,15 +179,16 @@ to {\$893} billion each year in economic costs and damages},
   author       = {NWS},
   organization = {NOAA},
   title        = {Glossary of Fire Weather Terms},
-  howpublished = {\url{https://www.weather.gov/phi/fire_glossary#:~:text=Moisture%20of%20extinction%20%2D%20The%20fuel,will%20not%20be%20sustained%20independently.}},
+  howpublished = {\url{https://www.weather.gov/phi/fire_glossary}},
   note         = {Accessed: July 3, 2024}
 }
 
 
 @misc{NIFC-2024-GAC,
   author       = {NIFC},
+  year = {2024},
   institution = {NIFC},
-  title        = {Geographic Area Coordination Centers - About Us},
+  title        = {{Geographic Area Coordination Centers} - About Us},
   howpublished = {\url{https://gacc.nifc.gov/admin/about_us/about_us.htm}},
   note         = {Accessed: July 3, 2024}
 }
@@ -200,8 +204,7 @@ issn = {0378-1127},
 doi = {https://doi.org/10.1016/j.foreco.2012.06.030},
 url = {https://www.sciencedirect.com/science/article/pii/S0378112712003593},
 author = {Jerry Williams},
-keywords = {Mega-fires, Wildland fire protection, Drought effects},
-abstract = {In the modern era, high-impact mega-fires are unprecedented for the suppression costs, property losses, natural resource damages, and loss of life often involved. For a number of years, these extraordinary wildfires have been increasing in number and in severity. They affect countries around the world, including those with enormous firefighting capabilities. High-impact mega-fires are frustrating efforts to provide for public safety, slow rates of deforestation, sequester carbon and reduce black carbon emissions. Despite more determined bidding, attempts to match increasing wildfire threats with greater suppression force have not stemmed climbing mega-fire trends. Yet, the majority of after-action reviews, reports, and commissions continue to weight recommendations to correcting emergency response deficiencies, generally through a fire operations lens. This paper explores the mega-fire phenomenon through a forest land management prism. It is an early attempt to focus on the contributory factors that may set the stage for high-impact mega-fires. The paper draws on the results from two coarse-filter overviews of high-impact mega-fires from around the world and the authors’ firsthand experiences dealing with others in the United States. Drought and fire exclusion policies have been implicated in the large fire problem. However, several high-impact mega-fires can be further traced to land management decisions that resulted in dense forest conditions with high biomass and fuel build-ups over extensive areas. As droughts have intensified, more of these accumulated fuels have become available to burn at intensities that exceed suppression capabilities. In contrast, some places have managed to largely avoid high-impact mega-fires. State and federal lands in Florida and Crown lands in Western Australia have better aligned policies and practices with the disturbance regimes that define the forested landscapes that they protect. They use prescribed fire at appropriate intensities, intervals, and scales to reduce fuels as the means to protect people, maintain forest resilience, ensure biodiversity, and increase margins of suppression effectiveness. Forest land management policies and practices that, by design or by default, result in greater volumes of fuel and rely on suppression capabilities to maintain these conditions may no longer be sustainable as droughts deepen and become more widespread. This paper suggests that adapting wildland fire management programs, forest land management policies, and the current regulatory framework to the reality of warmer, drier climate patterns will be essential in reducing mega-fire risks. Protecting fire-prone landscapes can no longer rely on suppression alone; protection will become more dependent on the management of forests where high-impact mega-fires incubate.}
+keywords = {Mega-fires, Wildland fire protection, Drought effects}
 }
 
 @article{Cartier-2022-UFQ,
@@ -214,4 +217,14 @@ abstract = {In the modern era, high-impact mega-fires are unprecedented for the 
     isbn={2324-9250},
     language={English},
     howpublished = {\url{https://eos.org/articles/u-s-fires-quadrupled-in-size-tripled-in-frequency-in-20-years}}
+}
+
+@misc{NWS-2023-DAC,
+  author       = {NWS},
+  organization = {NOAA},
+  year = {2023},
+  title        = {2023 {Denver} {Annual}
+{Climate} {Summary}},
+  howpublished = {\url{https://www.weather.gov/media/bou/2023DenverClimateSummary.pdf}},
+  note         = {Accessed: July 3, 2024}
 }
