--- a/ref/fmc.bib
+++ b/ref/fmc.bib
@@ -60,7 +60,7 @@ author = {Catchpole, E and Anderson, Wendy and Viney, N. and Mccaw, Lachie},
 year = {1999},
 month = {12},
 pages = {},
-title = {Estimating Fuel Response Time and Predicting Fuel Moisture Content From Eld Data},
+title = {Estimating Fuel Response Time and Predicting Fuel Moisture Content From {ELD} Data},
 volume = {10},
 journal = {International Journal of Wildland Fire},
 doi = {10.1071/WF01011}
@@ -84,6 +84,7 @@ keywords = "AVHRR "
 }
 
 @article{Hao-2007-RRL,
+author = {Xianjun Hao and John J. Qu},
 title = "Retrieval of real-time live fuel moisture content using {MODIS} measurements ",
 journal = "Remote Sensing of Environment ",
 volume = "108",
@@ -291,7 +292,7 @@ isbn="978-0123866608"
 
 @misc{Campbell-2017-RMM,
   author       = {{Campbell Scientific}},
-  title        = {Remote Measurements - Monitors forest-fire factor\; ideal for use with RAWS},
+  title        = {Remote Measurements - Monitors forest-fire factor\; ideal for use with {RAWS}},
   year = {2017},
   month = {10},
   howpublished = {\url{https://www.campbellsci.com/cs506-l}},
@@ -321,6 +322,7 @@ isbn="978-0123866608"
 @misc{Synoptic-2024-SWA,
   author = {Synoptic},
   title        = {Synoptic Weather {API}},
+  year = {2024},
   institution = {Synoptic},
   howpublished = {\url{https://synopticdata.com/weatherapi}},
   note = {Computer software}
