Update on Overleaf.

--- a/ref/fire.bib
+++ b/ref/fire.bib
@@ -53,7 +53,7 @@ call=" SD421 .P94 1996     auraria"
   month = {10},
   title        = {Climate-exacerbated wildfires cost the {U.S.} between {\$394}
 to {\$893} billion each year in economic costs and damages},
-  howpublished = {\url{https://www.jec.senate.gov/}},
+  howpublished = {\url{https://wildfiretaskforce.org/joint-economic-committee-democrats-report-on-cost-of-climate-exacerbated-wildfires/}},
   note         = {Accessed: July 3, 2024}
 }
 
@@ -88,7 +88,7 @@ to {\$893} billion each year in economic costs and damages},
 
 @misc{CDFPC-2024-HWI,
   author       = {CDFPC},
-  organization       = {Colorado Division of Fire Prevention \& Control},
+  organization       = {Colorado Division of Fire Prevention and Control},
   year = {2024},
   title        = {Historical Wildfire Information},
   howpublished = {\url{https://dfpc.colorado.gov/sections/wildfire-information-center/historical-wildfire-information}},
