--- a/appendix_models.tex
+++ b/appendix_models.tex
@@ -1,7 +1,7 @@
 
 \subsection{Linear Regression}
 
-The linear regression model used in this project uses the standard form with a constant intercept term, parameters for each predictor variable, and a random error term. As is standard in statistics, the random error is assumed to be normally distributed with zero mean and unknown variance. Let the response value at time $t$ be $y_t$, the number of predictors be $p$, the $i^{th}$ predictor at time $t$ be $x^{(i)}_t$, the $i^{th}$ parameter be $\beta^{(i)}$, and the random error be the  independent (across all $t$) and identically distributed random variable $\epsilon$ with zero mean and unknown variance $\sigma^2$. The model thus has the mathematical form \citep[p.\ 44]{Hastie-2010-ESL}:
+The linear regression model used in this project uses the standard form with a constant intercept term, parameters for each predictor variable, and a random error term. As is standard in statistics, the random error is assumed to be normally distributed with zero mean and unknown variance. Let the response value at time $t$ be $y_t$, the number of predictors be $p$, the $i^{th}$ predictor at time $t$ be $x^{(i)}_t$, the $i^{th}$ parameter be $\beta^{(i)}$, and the random error be the  independent (across all $t$) and identically distributed random variable $\epsilon$ with zero mean and unknown variance $\sigma^2$. The model thus has the mathematical form \citep[e.g.][p.\ 44]{Hastie-2010-ESL}:
 
 \[
 y_t = \beta^{(0)} + \sum_{i=1}^p \beta^{(i)} x^{(i)}_t + \epsilon, \qquad \epsilon\sim N(0, \sigma^2)
@@ -16,9 +16,7 @@ The term ``ensemble" in machine learning refers to using many different models a
 \subsubsection{Random Forest}
 \hfill
 
-Random Forests are a variety of ensemble learner used in both regression and classification tasks. For some predetermined number of trees, a regression tree is built using a bootstrap sample of the training data, subsetted to a random sample of the available predictors. The bootstrapping and random sampling of the predictors used within the model reduces the variance of the estimator. When bootstrap sampling and random feature subsetting is not used, the trees in the ensemble are highly correlated to each other and the model struggles to learn the relationships between the response variable and the predictors \citep[p.\ 587]{Hastie-2010-ESL}. 
-
-Table \ref{tab:rf-params} shows the hyperparameters used in this project for the Random Forest model.
+Random Forests are a variety of ensemble learner used in both regression and classification tasks. For some predetermined number of trees, a regression tree is built using a bootstrap sample of the training data, subsetted to a random sample of the available predictors. The bootstrapping and random sampling of the predictors used within the model reduces the variance of the estimator. When bootstrap sampling and random feature subsetting is not used, the trees in the ensemble are highly correlated to each other and the model struggles to learn the relationships between the response variable and the predictors \citep[p.\ 587]{Hastie-2010-ESL}. Table \ref{tab:rf-params} shows the hyperparameters used in this project for the Random Forest model.
 
 Other hyperparameters exist for Random Forest models, but if they are not listed here their default values in the software were used. The ``n\_estimators" hyperparameter determines the total number of regression trees used in the ensemble. Larger values indicate a more complicated and computationally intensive model, and larger values also increase the risk of overfitting. The ``max\_depth" hyperparameter controls the depth of the regression trees in the ensemble, and again larger values indicate a more complicated and computationally intensive model, and larger values increase the risk of overfitting. The ``min\_samples\_split" hyperparameter sets a lower bound on the number of observations required to make a data partition in any given tree, and higher values increase the risk of overfitting. So the algorithm won't even consider a data partition on an existing partition that has fewer than 2 observations. Similarly, the ``min\_samples\_leaf" hyperparameter sets the lower bound on the number of observations that are in a partition. So the algorithm won't make a data partition if it leaves zero observations in one of the partitions. The ``max\_features" hyperparameter determines what fraction of the predictor variables are used in any given regression tree. Larger values increase the risk of overfitting. Finally, the ``bootstrap" parameter determines whether or not a bootstrap sample, or random sample with replacement, of the training data is taken for each regression tree in the ensemble. Bootstrapping is used to reduce the correlation between the training data in each tree and thus reduce the variance of the final estimator. 
 
