--- a/ref/ml.bib
+++ b/ref/ml.bib
@@ -166,7 +166,7 @@ DOI = {10.3390/f12070933}
   publisher = {Springer},
   timestamp = {2010-06-03T15:15:09.000+0200},
   title = {The elements of statistical learning: data mining, inference and prediction},
-  url = {http://www-stat.stanford.edu/~tibs/ElemStatLearn/},
+  url = {https://hastie.su.domains/ElemStatLearn/},
   year = 2009
 }
 
