Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -43,6 +43,29 @@
 \date{July 22, 2024}
 \maketitle
 
+\begin{center}
+    \includegraphics[width=0.3\textwidth]{images/university_logo.png}
+
+
+    A Project submitted in partial fulfillment\\ of the requirements for the degree of\\ Master of Science in Statistics
+
+    \vspace{1em}
+
+    \textbf{Committee Members:}\\
+    Dr. Jan Mandel\textsuperscript{1}, Advisor\\
+    Dr. Joshua French\textsuperscript{1}\\
+    Dr. Kyle Hilburn\textsuperscript{2}\\
+
+    \textsuperscript{1}University of Colorado Denver\\
+    \textsuperscript{2}Cooperative Institute for Research in the Atmosphere, Colorado State University\\
+
+    \vspace{10em}
+    This research was partially supported by NASA grants 80NSSC23K1344, 80NSSC23K1118, 80NSSC22K1405, 80NSSC22K1717, and 80NSSC19K1091.
+    
+\end{center}
+
+\newpage
+
 \begin{abstract}
 Fuel moisture content (FMC) is a key predictor for wildfire rate of spread (ROS). Machine learning models of FMC are being used more in recent years, augmenting or replacing traditional physics-based approaches. Wildfire rate of spread (ROS) has a highly nonlinear relationship with FMC, where small differences in dry fuels lead to large differences in ROS. In this study, custom loss functions that place more weight on dry fuels were examined with a variety of machine learning models of FMC. The models were evaluated with a spatiotemporal cross-validation procedure to examine whether the custom loss functions led to more accurate forecasts of ROS. Results show that the custom loss functions improved accuracy for ROS forecasts by a small amount. Further research would be needed to establish whether the improvement in ROS forecasts leads to more accurate real-time wildfire simulations.
 \end{abstract}
